Preliminary version with static configuration

--- a/SuiteCRMAddIn/app.config
+++ b/SuiteCRMAddIn/app.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="SuiteCRMAddIn.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="SuiteCRMAddIn.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <userSettings>
         <SuiteCRMAddIn.Properties.Settings>
@@ -13,13 +16,7 @@
             <setting name="PublicKey" serializeAs="String">
                 <value>b8794235718652747b82fd713deac078</value>
             </setting>
-            <setting name="Username" serializeAs="String">
-                <value />
-            </setting>
             <setting name="Password" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Host" serializeAs="String">
                 <value />
             </setting>
             <setting name="ArchiveAttachments" serializeAs="String">
@@ -42,12 +39,6 @@
             </setting>
             <setting name="AutoArchive" serializeAs="String">
                 <value>False</value>
-            </setting>
-            <setting name="SyncCalendar" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="SyncContacts" serializeAs="String">
-                <value>0</value>
             </setting>
             <setting name="IsLDAPAuthentication" serializeAs="String">
                 <value>False</value>
@@ -78,4 +69,14 @@
     <system.net>
       <defaultProxy useDefaultCredentials="true" />
     </system.net>
+    <applicationSettings>
+        <SuiteCRMAddIn.Properties.Settings>
+            <setting name="Username" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Host" serializeAs="String">
+                <value>https://crm.debank.no/</value>
+            </setting>
+        </SuiteCRMAddIn.Properties.Settings>
+    </applicationSettings>
 </configuration>
