--- a/SuiteCRMAddIn/Properties/Settings.settings
+++ b/SuiteCRMAddIn/Properties/Settings.settings
@@ -20,14 +20,14 @@
     <Setting Name="PublicKey" Type="System.String" Scope="User">
       <Value Profile="(Default)">b8794235718652747b82fd713deac078</Value>
     </Setting>
-    <Setting Name="Username" Type="System.String" Scope="User">
+    <Setting Name="Username" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="Password" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="Host" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+    <Setting Name="Host" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">https://crm.debank.no/</Value>
     </Setting>
     <Setting Name="ArchiveAttachments" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
@@ -53,11 +53,11 @@
     <Setting Name="AutoArchive" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="SyncCalendar" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="User">
-      <Value Profile="(Default)">0</Value>
+    <Setting Name="SyncCalendar" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="Application">
+      <Value Profile="(Default)">3</Value>
     </Setting>
-    <Setting Name="SyncContacts" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="User">
-      <Value Profile="(Default)">0</Value>
+    <Setting Name="SyncContacts" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="Application">
+      <Value Profile="(Default)">3</Value>
     </Setting>
     <Setting Name="IsLDAPAuthentication" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
