--- a/SuiteCRMAddIn/SuiteCRMAddIn.csproj
+++ b/SuiteCRMAddIn/SuiteCRMAddIn.csproj
@@ -390,6 +390,10 @@
       <Project>{383e8ee7-604d-447d-a2c2-c50080d28f69}</Project>
       <Name>SuiteCRMClient</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SuiteCRMUtil\SuiteCRMUtil.csproj">
+      <Project>{5f528e60-2876-4f9c-bfd3-15fc7fe06756}</Project>
+      <Name>SuiteCRMUtil</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
@@ -440,8 +444,7 @@
       <Using Namespace="System" />
       <Using Namespace="System.IO" />
       <Using Namespace="System.Text.RegularExpressions" />
-      <Code Type="Fragment" Language="cs">
-        <![CDATA[
+      <Code Type="Fragment" Language="cs"><![CDATA[
           /*
            * Read the version from the assembly file, increment it as directed, 
            * substitute it into the target file.
@@ -491,8 +494,7 @@
             Regex.Replace( File.ReadAllText(TargetFileName),
               oldVersion,
               newVersion));
-          ]]>
-      </Code>
+          ]]></Code>
     </Task>
   </UsingTask>
   <PropertyGroup>
@@ -510,34 +512,23 @@
     <Delete Files="$(DocDirectory)\*.tmp" />
   </Target>
   <Target Name="Bump">
-    <BumpVersion 
-      ReleaseLevel="$(ReleaseLevel)"
-      TargetFileName="..\SuiteCRMAddinSetup\SuiteCRMAddinSetup.isl"/>
-    <BumpVersion 
-      ReleaseLevel="$(ReleaseLevel)"
-      TargetFileName="..\SuiteCrmClient\Properties\AssemblyInfo.cs"/>
-    <BumpVersion 
-      ReleaseLevel="$(ReleaseLevel)"
-      TargetFileName="$(Doxyfile)"/>
-    <BumpVersion 
-      ReleaseLevel="$(ReleaseLevel)"
-      TargetFileName="..\README.md"/>
-    <BumpVersion 
-      ReleaseLevel="$(ReleaseLevel)"
-      TargetFileName="Properties\AssemblyInfo.cs"/>
+    <BumpVersion ReleaseLevel="$(ReleaseLevel)" TargetFileName="..\SuiteCRMAddinSetup\SuiteCRMAddinSetup.isl" />
+    <BumpVersion ReleaseLevel="$(ReleaseLevel)" TargetFileName="..\SuiteCrmClient\Properties\AssemblyInfo.cs" />
+    <BumpVersion ReleaseLevel="$(ReleaseLevel)" TargetFileName="$(Doxyfile)" />
+    <BumpVersion ReleaseLevel="$(ReleaseLevel)" TargetFileName="..\README.md" />
+    <BumpVersion ReleaseLevel="$(ReleaseLevel)" TargetFileName="Properties\AssemblyInfo.cs" />
   </Target>
-  <PropertyGroup>  
+  <PropertyGroup>
     <BuildDependsOn>  
       Bump;
       $(BuildDependsOn);  
       Doxygen  
-    </BuildDependsOn>  
-  </PropertyGroup> 
-  <PropertyGroup>  
+    </BuildDependsOn>
+  </PropertyGroup>
+  <PropertyGroup>
     <CleanDependsOn>  
       $(CleanDependsOn);  
       DoxyClean  
-    </CleanDependsOn>  
-  </PropertyGroup> 
-
+    </CleanDependsOn>
+  </PropertyGroup>
 </Project>
