--- a/SuiteCRMAddIn/app.config
+++ b/SuiteCRMAddIn/app.config
@@ -49,9 +49,6 @@
             <setting name="ShowConfirmationMessageArchive" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="LogLevel" serializeAs="String">
-                <value>Error</value>
-            </setting>
             <setting name="DaysOldEmailToAutoArchive" serializeAs="String">
                 <value>10</value>
             </setting>
@@ -76,6 +73,9 @@
             </setting>
             <setting name="Host" serializeAs="String">
                 <value>https://crm.debank.no/</value>
+            </setting>
+            <setting name="LogLevel" serializeAs="String">
+                <value>Debug</value>
             </setting>
         </SuiteCRMAddIn.Properties.Settings>
     </applicationSettings>
