--- a/SuiteCRMAddIn/Properties/Settings.settings
+++ b/SuiteCRMAddIn/Properties/Settings.settings
@@ -26,9 +26,6 @@
     <Setting Name="Password" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="Host" Type="System.String" Scope="User">
-      <Value Profile="(Default)">https://crm.debank.no/</Value>
-    </Setting>
     <Setting Name="ArchiveAttachments" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
@@ -53,7 +50,7 @@
     <Setting Name="AutoArchive" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="SyncContacts" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="User">
+    <Setting Name="SyncContacts" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="Application">
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="IsLDAPAuthentication" Type="System.Boolean" Scope="User">
@@ -80,17 +77,20 @@
     <Setting Name="NeedsUpgrade" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="SyncCalls" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="User">
+    <Setting Name="SyncCalls" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="Application">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="SyncMeetings" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="User">
+    <Setting Name="SyncMeetings" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="Application">
       <Value Profile="(Default)">2</Value>
     </Setting>
-    <Setting Name="SyncTasks" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="User">
+    <Setting Name="SyncTasks" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="Application">
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="ArchivingSearchChains" Type="System.String" Scope="User">
       <Value Profile="(Default)">{ "Contacts": [ { "linkName": "accounts_contacts_1", "targetName": "accounts", "fields": ["id", "name" ]}]}</Value>
+    </Setting>
+    <Setting Name="Host" Type="System.String" Scope="User">
+      <Value Profile="(Default)">http://172.19.10.94/</Value>
     </Setting>
   </Settings>
 </SettingsFile>
