--- a/SuiteCRMAddIn/app.config
+++ b/SuiteCRMAddIn/app.config
@@ -19,9 +19,6 @@
             <setting name="Password" serializeAs="String">
                 <value />
             </setting>
-            <setting name="Host" serializeAs="String">
-                <value>https://crm.debank.no/</value>
-            </setting>
             <setting name="ArchiveAttachments" serializeAs="String">
                 <value>True</value>
             </setting>
@@ -66,6 +63,9 @@
             </setting>
             <setting name="ArchivingSearchChains" serializeAs="String">
                 <value>{ "Contacts": [ { "linkName": "accounts_contacts_1", "targetName": "accounts", "fields": ["id", "name" ]}]}</value>
+            </setting>
+            <setting name="Host" serializeAs="String">
+                <value>http://172.19.10.94/</value>
             </setting>
         </SuiteCRMAddIn.Properties.Settings>
     </userSettings>
