--- a/SuiteCRMAddIn/app.config
+++ b/SuiteCRMAddIn/app.config
@@ -65,7 +65,7 @@
                 <value>{ "Contacts": [ { "linkName": "accounts_contacts_1", "targetName": "accounts", "fields": ["id", "name" ]}]}</value>
             </setting>
             <setting name="Host" serializeAs="String">
-                <value>http://172.19.10.94/</value>
+                <value>https://crm.debank.no/</value>
             </setting>
         </SuiteCRMAddIn.Properties.Settings>
     </userSettings>
