Sync only tasks, meetings. LogLevel Error

--- a/SuiteCRMAddIn/app.config
+++ b/SuiteCRMAddIn/app.config
@@ -78,7 +78,7 @@
                 <value />
             </setting>
             <setting name="LogLevel" serializeAs="String">
-                <value>Debug</value>
+                <value>Error</value>
             </setting>
         </SuiteCRMAddIn.Properties.Settings>
     </applicationSettings>
