--- a/SuiteCRMAddIn/Properties/Settings.settings
+++ b/SuiteCRMAddIn/Properties/Settings.settings
@@ -63,7 +63,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="LogLevel" Type="SuiteCRMClient.Logging.LogEntryType" Scope="Application">
-      <Value Profile="(Default)">Debug</Value>
+      <Value Profile="(Default)">Error</Value>
     </Setting>
     <Setting Name="DaysOldEmailToAutoArchive" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">10</Value>
@@ -78,13 +78,13 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="SyncCalls" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="Application">
-      <Value Profile="(Default)">2</Value>
+      <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="SyncMeetings" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="Application">
       <Value Profile="(Default)">2</Value>
     </Setting>
     <Setting Name="SyncTasks" Type="SuiteCRMAddIn.BusinessLogic.SyncDirection.Direction" Scope="Application">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">2</Value>
     </Setting>
     <Setting Name="ArchivingSearchChains" Type="System.String" Scope="User">
       <Value Profile="(Default)">{ "Contacts": [ { "linkName": "accounts_contacts_1", "targetName": "accounts", "fields": ["id", "name" ]}]}</Value>
